--- a/02-valley.rmd
+++ b/02-valley.rmd
@@ -1,53 +1,55 @@
-# Phase 2: The Valley {-}
+# Этап 2: Долина {-}
 
-> *"Politeness is the poison of collaboration."* — Edwin Land
+> *"Politeness is the poison of collaboration." ("Вежливость - яд сотрудничества")* — Edwin Land
 > 
 
 ![[McMurdo Dry Valleys](https://www.alluringworld.com/mcmurdo-dry-valleys/)](img/4.png)
 
-Phase 2 is best defined as [the dip](https://www.amazon.in/Dip-Little-Book-Teaches-Stick/dp/1591841666). Your intial enthusiasm and energy has slowly worn off and you’re motivations are getting tested by the day.
+Этап 2 лучше всего определить как спад. Ваш первоначальный энтузиазм и энергия постепенно иссякают, а мотивация испытывается с каждым днем все сильнее.
 
-Sure, you are not stumbling in the dark — you know where you’re going and you have a strong team of five or six members that have made tangible progress.
+Конечно, вы не спотыкаетесь в темноте - вы знаете, куда идете, и у вас сильная команда из пяти-шести человек, которая добилась ощутимого прогресса.
 
-But things have suddenly become complex and have taken a different shape. You are now in the valley.
+Но все внезапно усложнилось и приобрело другую форму. Теперь вы находитесь в долине.
 
-## Setting the Stage {-}
+## Создание площадки {-}
 
-The meta of navigating the valley is addressing the newfound complexity in your community. This comes in two forms — the first is internal complexity. Your community has essentially doubled in size, which has increased coordination costs. Arriving at consensus takes longer, and you might see in-groups forming in your community.
+Мета навигации по долине - это решение проблемы вновь обретенной сложности в вашем сообществе. Это происходит в двух формах - первая - внутренняя сложность. Ваше сообщество, по сути, удвоилось в размерах, что увеличило затраты на координацию. Приход к консенсусу занимает больше времени, и вы можете увидеть, как в вашем сообществе формируются внутренние группы.
 
-The second is external complexity. All the context you set in the beginning — while important to reach here — now stands questioned. For example, your narrative might not have had the impact you expected it to, or it may have attracted those that are more interested in spectating rather than participating.
+Вторая - внешняя сложность. Весь контекст, который вы задали в самом начале - хотя он и был важен для достижения цели - теперь ставится под сомнение. Например, ваше повествование могло не оказать того воздействия, на которое вы рассчитывали, или привлечь тех, кому интереснее наблюдать, а не участвовать.
 
-Here are some frameworks and concepts to keep in mind as you navigate the valley.
+Вот некоторые рамки и концепции, которые следует иметь в виду, когда вы будете перемещаться по долине.
 
-### Fostering your community {-}
+### Укрепляйте свое сообщество {-}
 
-The first outside people to join your community are special because they were attracted by the potential of your community, and not its actual progress or impact. Joining a community at this stage implies high levels of intrinsic motivation, since they are few to no external benefits or bragging rights of joining any community so early.
+Первые сторонние люди, присоединившиеся к вашему сообществу, особенные, потому что их привлек потенциал вашего сообщества, а не его реальный прогресс или влияние. Присоединение к сообществу на этом этапе подразумевает высокий уровень внутренней мотивации, поскольку внешних преимуществ или прав на хвастовство от такого раннего вступления в сообщество практически нет.
 
-At this stage, it is of utmost importance to speak to the intrinsically motivated parts of your members than the extrinsically motivated parts. This is best done by highlighting and appreciating each member individually and publicly for their contributions.
+На этом этапе крайне важно говорить с внутренне мотивированными частями членов сообщества, а не с внешними. Лучше всего это сделать, выделив и публично оценив вклад каждого члена сообщества в отдельности.
 
-At the same time, you should put some effort into defining different ways people could get involved to reduce the distance from a new member to an active contributor. Such pathways provide templates to collect social capital, which makes people spring to action.
+В то же время, вам следует приложить некоторые усилия для определения различных путей вовлечения людей, чтобы сократить расстояние от нового члена до активного участника. Такие пути обеспечивают шаблоны для накопления социального капитала, который побуждает людей к действию.
 
-The open source community is a wonderful example of this. Since practically all issues are open and all PRs can are default visible, members visibly collect social capital by contributing to repositories, with the ultimate validation coming in the form of a merged pull request.
+Сообщество разработчиков открытого исходного кода - прекрасный пример этого. Поскольку практически все проблемы открыты и все PR могут быть видны по умолчанию, участники заметно накапливают социальный капитал, внося свой вклад в репозитории, а окончательное подтверждение приходит в виде объединенного запроса на исправление.
 
-### Setting decision making processes {-}
+### Установить процессы принятия решений {-}
 
-As communities scale, attaining a perfect consensus gets exponentially tougher. But most of the times a perfect consensus isn’t even needed. Time that’s arguing about the **theoretical** best decision is actually traded-off for **concretely** slower execution. Therefore, a good enough decision making process is often sufficient.
+По мере роста сообщества достижение идеального консенсуса становится экспоненциально сложнее. Но в большинстве случаев идеальный консенсус даже не нужен. Время, которое тратится на споры о теоретически лучшем решении, на  самом деле обменивается на конкретное более медленное исполнение. Поэтому зачастую достаточно хорошего процесса принятия решений.
 
-What does this look like, though? Well, a decision making process focussed on schelling points is a sufficient strategy for most communities. In reality, each individual has a different way of calculating the cost vs. benefit of specific decisions. So it is difficult to have everyone agree upon the “best” outcome to choose/vote for.
+Но как это выглядит? Для большинства сообществ достаточной стратегией является процесс принятия решений, сфокусированный на точках шеллинга. В реальности каждый человек по-своему рассчитывает соотношение затрат и выгод от конкретных решений. Поэтому трудно добиться того, чтобы все согласились с "лучшим" результатом, за который следует выбирать/голосовать.
 
-Instead, if everyone based their decision on what they think *everyone else* will choose, [consensus is arrived at faster](https://medium.com/@komorama/on-schelling-points-in-organizations-e90647cdd81b). Having a consistent, clear North star, i.e. your community’s goal agreed upon goal, also makes decision-making much easier. (link to phase 1, creating narratives)
+Вместо этого, если каждый будет основывать свое решение на том, что, по его мнению, выберут остальные, [консенсус будет достигнут быстрее](https://www.google.com/url?q=https://medium.com/@komorama/on-schelling-points-in-organizations-e90647cdd81b&sa=D&source=editors&ust=1677521912121949&usg=AOvVaw2Ag5WEfSGWiNAWI0Br_SSn). Наличие последовательной, четкой Северной звезды, т.е. согласованной цели вашего сообщества, также значительно облегчает процесс принятия решений. ([ссылка на этап 1, создание нарративов](https://www.google.com/url?q=https://docs.google.com/document/u/0/d/1gzsTJdRIkN-F40yIrV-xN9FJtyOb0Ry04C5OA8_4Omo/edit&sa=D&source=editors&ust=1677521912122311&usg=AOvVaw1iYuYDCJQDBoAuP-3TOQnX))
 
-### Resolving conflicts {-}
+### Разрешение конфликтов {-}
 
-If you have been working hard, you have probably already seen an intense disagreement or two in  your community. Depending on how agreeable your members are, this would have either ended in reluctant giving in followed by both parties holding grudges, or a massive blow-up that created a rift in your community.
+Если вы много работаете, то, вероятно, уже стали свидетелем одного или двух серьезных разногласий в вашем сообществе. В зависимости от того, насколько сговорчивы ваши члены, это могло закончиться либо неохотным уступлением, после которого обе стороны затаили обиду, либо масштабным взрывом, который вызвал раскол в вашем сообществе.
 
-But conflict is not necessarily a bad thing! If anything, it is a sign that people care. This is the right stage to create a ritual, a process around conflict resolution. The focus of this should *always* be on reconciliation of the differing factions, never an **investigation** or a **judgement** of who was at fault.
+Но конфликт - это не обязательно плохо! Это признак того, что людям не все равно. Это подходящий этап для создания ритуала, процесса разрешения конфликта. В центре внимания всегда должно быть примирение различных фракций, а не расследование или осуждение того, кто виноват.
 
-This is also a right time to set formal rules around inter-personal behaviour in your community. While an inclusive conflict resolution process is great for matters pertaining to the community at large, you need a slightly different approach to inter-personal conflicts that leave either party with the inability to full express themselves. A good start is for the leaders, i.e. the initiators of the community to hold a safe space where members can come forth and share their concerns, no matter how trivial or grave.
+Это также подходящее время для установления формальных правил межличностного поведения в вашем сообществе. В то время как инклюзивный процесс разрешения конфликтов отлично подходит для вопросов, касающихся всего сообщества в целом, вам нужен несколько иной подход к межличностным конфликтам, в результате которых ни одна из сторон не может полностью выразить себя. Хорошим началом является создание лидерами, то есть инициаторами сообщества, безопасного пространства, где члены сообщества могут прийти и поделиться своими проблемами, независимо от того, насколько они тривиальны или серьезны.
 
-## Time to Perform! {-}
+## Время действовать! {-}
 
-The valley is defined by the exponential increase in the complexity of everything. It may feel things are tougher than what you expected them to be. This is normal. Finish the following activities to maintain your sanity when the going gets tough.
+Долина определяется экспоненциальным ростом сложности всего. Может показаться, что все сложнее, чем вы ожидали. Это нормально. Выполните следующие действия, чтобы сохранить рассудок в трудный момент.
+
+--- edit here onwards! ---
 
 ### Activity 6: Where does your community reside? {-}
 
@@ -135,24 +137,26 @@ In communities, the earliest members often set the tone of interactions for ever
 * That’s why the biggest communities have zero tolerance for things that are common in small groups of people, simply because it broadens the “grey area” which is were most transgressions of a community’s code of conduct lie.
 * Remember, people are more concerned with not looking bad in front of their peers than gaining their praise. Often, not acknowledging and encouraging the unwanted behaviour by anyone, ever is a really strong way to prevent transgressions of your code of conduct, or address them swiftly if they ever happen.
 
-## Common Roadblocks {-}
+--- edit above this! ---
+
+## Общие препятствия {-}
 
 ![[The Dip by Seth Godin](https://www.bennadel.com/blog/776-the-dip-by-seth-godin-thanks-jack-welde.htm)](img/5.png)
 
-A community in the valley stage gets slowly gets itself exposed to reality for the first time. This can be a tough process to navigate. Things might *feel* like they are not working or breaking down, when in fact they are. And if they aren’t, then sometimes it is tough to actually understand *what* is breaking down and *why*.
+Сообщество, находящееся на стадии долины, постепенно впервые сталкивается с реальностью. Это может быть трудным процессом. Может показаться, что вещи не работают или ломаются, хотя на самом деле это так. А если это не так, то иногда трудно понять, что именно и почему ломается.
 
-When in doubt, always look if the reason can be attributed to internal complexity or external. Chances are, the roadblock you face is ideally a result of both internal and external complexity.
+Если вы сомневаетесь, всегда смотрите, может ли причина быть связана с внутренней сложностью или внешней. Есть шанс, что препятствие, с которым вы столкнулись, в идеале является результатом как внутренней, так и внешней сложности.
 
-The aim then is to do what you can control. You always have a control on how you work and approach problems. Focus on this. Set, revisit or revise processes. Consciously steer your culture. 
+Цель состоит в том, чтобы делать то, что вы можете контролировать. Вы всегда можете контролировать то, как вы работаете и как подходите к решению проблем. Сосредоточьтесь на этом. Установите, пересмотрите или пересмотрите процессы. Сознательно управляйте своей культурой.
 
-It may be tempting to get right to “what matters” and move on to the next thing. But the importance of spending time on your culture in this stage cannot be overstated. This may just be the last time you have any sort of proper control over it.
+Может возникнуть соблазн сразу приступить к "главному" и перейти к следующему делу. Но важность уделения времени вашей культуре на этом этапе невозможно переоценить. Возможно, это последний раз, когда у вас есть хоть какой-то надлежащий контроль над ней.
 
-## Conclusion {-} 
+## Заключение {-} 
 
-Contrary to the first stage where things seem “up only”, a valley starts with a decline and eventually ends up with things looking not-so-bad. You go from what is essentially one small unit of five or six people to ****two**** small units of this size.
+В отличие от первой стадии, когда все кажется "только вверх", долина начинается со спада и в конечном итоге заканчивается тем, что все выглядит не так уж плохо. Вы переходите от того, что по сути является одной небольшой единицей из пяти или шести человек, к двум небольшим единицам такого размера.
 
-Your community now onwards can be best seen as a collection of similar-sized units. If you have been careful, you have templatized this process of growth. You would have also become comfortable with putting yourself out there, and have learnt the true value of the feedback gained from exposing your ideas to the world.
+Теперь вашу общину можно рассматривать как совокупность единиц одинакового размера. Если вы были внимательны, то вы шаблонизировали этот процесс роста. Кроме того, вам стало легче выставлять себя на всеобщее обозрение, и вы узнали истинную ценность обратной связи, получаемой при демонстрации своих идей миру.
 
-You have most probably revisited some aspect of your narrative or your values, and you have a space that your community calls home. You have processes for collective decision making and managing your finances in an open way.
+Скорее всего, вы пересмотрели некоторые аспекты своего повествования или свои ценности, и у вас есть пространство, которое ваше сообщество называет своим домом. У вас есть процессы коллективного принятия решений и открытого управления финансами.
 
-Your mission seems to have the potential to resonate with people — not because you simply think so, but because you have signs that point in this direction. Things will pick up the pace soon, and the way you look at your community is going to change. 
+Похоже, что ваша миссия имеет потенциал для резонанса с людьми - не потому, что вы просто так думаете, а потому, что у вас есть признаки, указывающие в этом направлении. Вскоре все пойдет своим чередом, и взгляд на вашу общину изменится.
