--- a/03-carnival.rmd
+++ b/03-carnival.rmd
@@ -1,51 +1,53 @@
-# Phase 3: The Carnival {-}
+# Этап 3: Ярмарка {-}
 
-> *“No one can whistle a symphony. It takes a whole orchestra to play it.”* – H.E. Luccock
-> 
+>*“No one can whistle a symphony. It takes a whole orchestra to play it.” ("Никто не может насвистывать симфонию. Чтобы сыграть ее, нужен целый оркестр".)* – H.E. Luccock
+>
 
 ![[Carnival Chaos](https://www.cliftonhill.com/sites/default/files/places/primary-images/carnivalchaos1.jpg)](img/6.png)
 
-Communities that don’t die in the desert usually die in the valley. And the ones that die in neither see their persistence rewarded by reaching the carnival.
+Сообщества, которые не умирают в пустыне, обычно умирают в долине. А те, которые не умирают ни там, ни там, видят, что их упорство вознаграждено достижением ярмарки.
 
-It is fun and exciting to say the least. A welcome change.
+Это, мягко говоря, весело и захватывающе. Приятная перемена.
 
-Your narrative seems to have found its audience, howsoever small that may be. There is a regular pace at which your community is adding more members. You may even see a spike in your engagement on social media.
+Ваш рассказ, похоже, нашел свою аудиторию, какой бы маленькой она ни была. Ваше сообщество регулярно пополняется новыми членами. Вы даже можете заметить всплеск активности в социальных сетях.
 
-The mindset that sustained you in the desert and the valley is not of much use here. This is because the carnival is characterised as phase of abundance. Opportunities that seemed scarce — like those to recruit people or fill your treasury — are available in plenty.
+Мышление, которое поддерживало вас в пустыне и долине, здесь не слишком полезно. Это связано с тем, что ярмарка характеризуется как этап изобилия. Возможности, которые казались скудными - например, набрать людей или пополнить казну, - открываются в изобилии.
 
-Let’s take a closer look.
+Давайте рассмотрим подробнее.
 
-## Setting the Stage {-}
+## Создание площадки {-}
 
-It is tempting to overindulge in the carnival. Your community might want to spend more money and do more things. At the same time, things move faster than ever. More members join by the day, which brings the risk of diluting your community’s atmosphere. 
+Заманчиво чрезмерно увлечься ярмаркой. Ваше сообщество может захотеть потратить больше денег и сделать больше дел. В то же время события развиваются быстрее, чем когда-либо. С каждым днем присоединяется все больше участников, что чревато разбавлением атмосферы вашего сообщества.
 
-The key to making the most of the carnival is sticking to the plan. This does not mean not trying new things, but in a space full of distractions it always helps to remember what you initially set out to do. 
+Ключ к получению максимальной отдачи от ярмарки - придерживаться плана. Это не значит, что не нужно пробовать новое, но в пространстве, полном отвлекающих факторов, всегда полезно помнить, что вы изначально поставили перед собой цель.
 
-### Encouraging participation {-}
+### Поощрять участие {-}
 
-Today, the the lines between a customer, contributor and a community member are more blurred than ever. People that join as contributors might turn into customers. Customers that come for the product or service might choose to join the community and contribute to its mission.
+Сегодня границы между клиентом, участником и членом сообщества размыты как никогда. Люди, которые присоединяются к сообществу в качестве участников, могут превратиться в клиентов. Клиенты, которые приходят за продуктом или услугой, могут решить присоединиться к сообществу и внести свой вклад в его миссию.
 
-Your job as the community founder now is to facilitate the environment where people drift between customer, contributor or a community member easily. This means your leadership must be like that of a party host, instead of a troop leader.
+Ваша задача как основателя сообщества заключается в том, чтобы создать условия, в которых люди легко переходят от клиента к участнику сообщества. Это означает, что ваше руководство должно быть похоже на руководство хозяина вечеринки, а не командира отряда.
 
-Leadership as hospitality is all about making people comfortable and included. In this regard, you need to ensure that people have ample opportunities to add to the conversation or contribute to a project with little to no friction.
+Лидерство, как гостеприимство, заключается в том, чтобы людям было комфортно и чтобы они были включены. В связи с этим вам необходимо обеспечить людям широкие возможности для того, чтобы они могли добавить свою лепту в разговор или внести свой вклад в проект без особых трений.
 
-### Acknowledging outliers {-}
+### Признавайте отклонения {-}
 
-Power laws apply everywhere, and they apply to your community too.
+Законы власти действуют везде, и в вашем сообществе они тоже применимы.
 
-As you grow, you need to develop the skill to discern members that have an outsized impact on things. This need not necessarily be in terms of output.
+По мере роста вам необходимо развивать умение определять членов сообщества, которые оказывают чрезмерное влияние на происходящее. Это не обязательно должны быть результаты.
 
-Some people might be great at shipping — which is easy to notice — but there are others that are great at uplifting the community or keeping things glued together. This requires deep observation. After you have found out these people, make sure you do everything in your power to make them feel acknowledged and appreciated.
+Некоторые люди могут отлично справляться с доставкой - это легко заметить - но есть и другие, которые отлично справляются с поднятием настроения сообщества или поддержанием связей. Это требует глубокого наблюдения. После того как вы выявите этих людей, сделайте все возможное, чтобы они почувствовали признание и благодарность.
 
-### Demonstrating progress {-}
+### Демонстрировать прогресс {-}
 
-Visible progress is a key driver of motivation. Besides making your community seem lively, it makes your community fun and keeps the morale high.
+Видимый прогресс является ключевым фактором мотивации. Помимо того, что он создает впечатление оживленности, он делает ваше сообщество веселым и поддерживает высокий моральный дух.
 
-Demonstrating progress need not always be about communicating output. It can be done in many ways. A regular cadence of meetings that are open to the broader public are a great way to do so.
+Демонстрация прогресса не всегда сводится к сообщению о результатах. Это можно сделать разными способами. Регулярное проведение встреч, открытых для широкой общественности, - отличный способ сделать это.
 
-The best communities also spend a lot of time documenting and articulating themselves — whether in video or text form — and putting it out there for the world to see.
+Лучшие сообщества также тратят много времени на документирование и формулирование своих действий - будь то видео или текст - и выставляют их на всеобщее обозрение.
 
-## Time to Perform! {-}
+## Время действовать! {-}
+
+--- edit here onwards --
 
 ### Activity 14: Create functional teams. {-}
 
@@ -111,26 +113,28 @@ Make it a point to share anything your community accomplishes or completes as re
 * Try to open your communication channels to the world.
     * Nothing demonstrates progress like letting the world peep into your office. This might not be possible for all communities, but there is certainly a version of this that you can implement. You may just open up the channel where you discuss and execute proposals. Or you can have some of your internal discussions open to the public.
 
-## Common Roadblocks {-}
+    --- edit above this ---
+
+## Общие препятствия {-}
 
 ![[Sometimes it may feel like this](https://aeon.co/essays/swiss-flying-cows-is-this-the-future)](img/7.png)
 
-While the valley challenged your commitment, the carnival will challenge your sanity. All your processes and rituals get battletested and reveal interesting things. Your job here is to acknowledge the facts that are revealed and take action on them if necessary.
+Если долина бросила вызов вашим обязательствам, то ярмарка бросит вызов вашему здравомыслию. Все ваши процессы и ритуалы подвергнутся испытанию и выявят интересные вещи. Ваша задача здесь - признать открывшиеся факты и при необходимости принять меры.
 
-For example, you may realize that some rituals that worked well in earlier phases just don’t scale. Or that there are certain changes that must be made to your workflows, or that a particular thing you did was great in attracting members.
+Например, вы можете понять, что некоторые ритуалы, которые хорошо работали на предыдущих этапах, просто не подходят. Или что в ваши рабочие процессы необходимо внести определенные изменения, или что какая-то конкретная вещь, которую вы делали, отлично привлекала участников.
 
-Whatever this maybe, consciously analysing it and thinking about what you can do it (and if you should do anything about it) is much better than simply ignoring it.
+Что бы это ни было, сознательно проанализировать это и подумать о том, что вы можете сделать (и стоит ли вам вообще что-то делать), гораздо лучше, чем просто игнорировать это.
 
-## Conclusion {-}
+## Заключение {-}
 
-While you entered the carnival with a two small teams of five to six people, you find yourself leaving with ten or more such small teams. In a short span of time, your community has not double, but grown several fold. 
+Если вы пришли на ярмарку с двумя небольшими командами по пять-шесть человек, то уходите с десятью или более такими же небольшими командами. За короткий промежуток времени ваше сообщество не удвоилось, а выросло в несколько раз.
 
-Your treasury has some money in it, no matter the amount. Your forums are populated with lively discourse. You have a dependable governance process. You have self-managing teams in your community, and most important your tangible power as a community founder has diminished.
+В вашей казне есть деньги, независимо от их количества. На ваших форумах идет оживленная дискуссия. У вас есть надежный процесс управления. В вашем сообществе есть самоуправляемые команды, и, что самое важное, ваша ощутимая власть как основателя сообщества уменьшилась.
 
-These are all signs of a healthy community.
+Это все признаки здорового сообщества.
 
-Things have somewhat stabilised — dare you say, even plateaued — and now you need to focus on maintaining and guarding the castle you have built.
+Ситуация несколько стабилизировалась - осмелюсь сказать, даже вышла на плато - и теперь вам нужно сосредоточиться на поддержании и охране построенного вами замка.
 
 ---
 
-[1] For example, the first thing one wonders when they meet a startup founder is not some specific detail of their company, but rather the backstage or the meta details of how they got started, what issues they faced, etc. The same goes for your community. Sharing your learnings is, in a way, a great introduction to your community.
+[1] Например, первое, что интересует человека при встрече с основателем стартапа, это не какие-то конкретные детали его компании, а скорее закулисье или мета-детали того, как они начинали, с какими проблемами столкнулись и т.д. То же самое относится и к вашему сообществу. Делиться своими наработками - это, в некотором роде, отличное введение в ваше сообщество.
