--- a/01-desert.rmd
+++ b/01-desert.rmd
@@ -73,11 +73,11 @@
     * The above, distilled into your narrative becomes — we are expanding the pokemon fandom around the world.
     * Remember, the best narratives evolve with community participation. So while you must put in some thought, do not spend too much time here. There is a high chance that as your community grows, it will collectively decide to focus on something that slightly different, or even completely different.
 
-### Activity 3: Spread the word. {-}
+### Действие 3: Распространение информации. {-}
 
-Now that you have clarity, create a content strategy that revolves around your narrative and start posting on Twitter, Lens and Farcaster to begin with.
+Теперь, когда у вас есть ясность, создайте стратегию контента, которая будет вращаться вокруг вашей идеи, и начните публиковаться в Twitter, Lens и Farcaster.
 
-### Activity 4: How do you participate in your community? {-}
+### Действие 4: Как вы участвуете в жизни своего сообщества? {-}
 
 > ℹ️ **Working smart** 
 >
