--- a/01-desert.rmd
+++ b/01-desert.rmd
@@ -56,53 +56,52 @@
 
 --- Edit here onwards ---
 
-### Activity 2: What are you getting people excited about? {-}
+### Действие 2: Чем вы привлекать людей? {-}
 
-> ℹ️ **Building narratives** 
+> ℹ️ **Создание нарративов** 
 >
-> A strong narrative is like insurance. Its true value revealed in dire times. A good narrative keeps community members intrinsically motivated and attracts new members at the same time.
+> Хорошо раскрытая идея подобна страховке. Её истинная ценность раскрывается в тяжелые времена. Правильное изложение поддерживает внутреннюю мотивацию членов сообщества и в то же время привлекает новых членов.
 
-*“If you want to build a ship, don’t drum up the men to gather wood, divide the work, and give orders. Instead, teach them to yearn for the vast and endless sea.”* — Antoine de Saint-Exupéry
+*"Если вы хотите построить корабль, не пытайтесь заставить мужчин собирать дрова, распределять работу и отдавать приказы. Вместо этого научите их тосковать по бескрайнему и бесконечному морю". - Антуан де Сент-Экзюпери
 
-* Ideally, you want your community to grow because there is something you cannot do alone. What is this? Create a one-line summary that explicitly states your goals and motivations.
-    * “I want to be surrounded by people that share my niche interest of X.”
-    * Now imagine for a minute that you successfully gathered these kind of people. What kind of work wil    l you do together? What will that lead to?
-        * “A group of people that share this interest will get together and A, B and C activities, that will have a P, Q and R effect on the world.
-    * The effect you will have on the world becomes your narrative.
-        * So, if I am surrounded by people that share my niche interest in Pokemon, then we shall participate in and conduct events, fund relevant projects and contribute to the franchise by creating content. This will introduce a wider audience to our interest, and provide them with community and entertainment.
-    * The above, distilled into your narrative becomes — we are expanding the pokemon fandom around the world.
-    * Remember, the best narratives evolve with community participation. So while you must put in some thought, do not spend too much time here. There is a high chance that as your community grows, it will collectively decide to focus on something that slightly different, or even completely different.
+* В идеале вы хотите, чтобы ваше сообщество росло, потому что есть нечто, чего вы не можете сделать в одиночку. Что это? Составьте однострочное резюме, в котором четко сформулируйте свои цели и мотивы.
+    * “Я хочу, чтобы меня окружали люди, которые разделяют мои нишевые интересы X”
+    * А теперь представьте на минуту, что вы успешно собрали таких людей. Какую работу вы будете делать вместе? К чему это приведет?
+        * "Группа людей, разделяющих этот интерес, соберется вместе и будет заниматься деятельностью A, B и C, которая окажет на мир эффект P, Q и R".
+    * То, как вы повлияете на мир, станет вашим жизненным сценарием.
+        * Так, если меня окружают люди, разделяющие мой нишевый интерес к Pokemon, то мы будем участвовать и проводить мероприятия, финансировать соответствующие проекты и вносить вклад во франшизу, создавая контент. Это познакомит более широкую аудиторию с нашими интересами и обеспечит им сообщество и развлечение.
+    * Вышеизложенное, переформулированное в ваше изложение, превращается в - мы расширяем фэндом покемонов по всему миру.
+    * Помните, что лучшие идеи развиваются при участии сообщества. Поэтому, хотя вы должны немного подумать, не тратьте на это слишком много времени. Велика вероятность, что по мере роста вашего сообщества оно коллективно решит сосредоточиться на чем-то несколько ином или даже совершенно ином.
 
 ### Действие 3: Распространение информации. {-}
 
-Теперь, когда у вас есть ясность, создайте стратегию контента, которая будет вращаться вокруг вашей идеи, и начните публиковаться в Twitter, Lens и Farcaster.
+Теперь, когда у вас есть понимание, создайте стратегию контента, которая будет вращаться вокруг вашей идеи, и начните публиковаться в Twitter, Lens и Farcaster.
 
 ### Действие 4: Как вы участвуете в жизни своего сообщества? {-}
 
-> ℹ️ **Working smart** 
+> ℹ️ **Работать с умом** 
 >
-> Setting a healthy, intentional approach to working goes a very, very long way. It is indeed tempting to “just get it done” when it’s just you or you and a couple others. But not spending time on this is like extending a line of credit which will be due once your community grows.
-Having said that, it’s the early stages, so clarity and brevity is important. Making a laundry list of rituals, values and processes will backfire, and dilute any existing motivation you have. It is therefore ideal to stick to just a few — think really hard about what you care about — and then be open to changing or adding to these as your community grows.
+> Здоровый, целенаправленный подход к работе помогает в долгосрочной перспективе. Действительно, очень заманчиво "просто сделать все самому", когда дело касается только вас или вас и еще нескольких человек. Но не тратить на это время - все равно что продлевать кредитную линию, которая будет погашена, когда ваше сообщество разрастется. Учитывать это, сейчас необходимо на ранних стадиях, поэтому важна ясность и краткость. Составление "обязательного" списка ритуалов, ценностей и процессов приведет к обратному результату и ослабит имеющуюся мотивацию. Поэтому идеальным вариантом будет придерживаться лишь нескольких пунктов - хорошенько подумайте о том, что вам важно, - а затем будьте готовы менять или дополнять их по мере роста вашего сообщества.
 
-* Discover the core value(s) of your community.
-    * Everyone and every group has some set of values that they never compromise on. These could be explicit or implicit. Try to notice the patterns in yourself and those around you.
-        * Do you try to finish things as soon as you can? Are you over-communicative in your interactions? Do you try to be thorough in everything you do? Do you tolerate ambiguity well?
-    * It is easier to notice the patterns in others than yourself. If it’s just you right now, ask your friends and families about ways to describe you.
-* Consciously set rituals.
-    * Rituals bring a sense of stability to a community. Good rituals make members feel heard, and indirectly direct member behaviour.
-    * Ideally, you should an initiation ritual and a connection ritual.
-    * Initiation rituals define how you welcome new members to your community. Ideally, this should be a two-way interaction. For example, new members must collect a Mirror post and introduce themselves to the group collectively. On the other side, all members must make an effort to individually reach out to the new member.
-    * The best initiation rituals are memorable. For example, you could have all your existing members change their Twitter profile picture to that of the new member for a week. Who said it can’t be fun?
-    * A connection ritual bonds community members outside of the context of “work”.
-* Good connection rituals manage expectations of members. This could be a weekly call where members take turns to share what’s on their mind —
-    * Did anything unexpected happen in your interactions this week?
-    * is there something insignificant that is bothering you? Maybe the way someone replied or something they did that is trivial but made you make a note of it.
-    * Was participating in this community this week an exciting challenge or a daunting task?
+* Определите основные ценности вашего сообщества.
+    * У каждого человека и каждой группы есть определенный набор принципов, с которыми они никогда не идут на компромисс. Они могут быть явными или неявными. Постарайтесь заметить шаблоны в себе и окружающих вас людях.
+        * Стараетесь ли вы завершать дела как можно быстрее? .Достаточно ли вы коммуникабельны? Стараетесь ли вы быть дотошным во всем, что делаете? Хорошо ли вы переносите двусмысленность?
+    * Легче заметить закономерности в других, чем в себе. Если в данный момент речь идет только о вас, спросите своих друзей и близких, как бы они могли описать вас.
+* Сознательно установите ритуалы.
+    * Ритуалы привносят в сообщество чувство стабильности. Продуманные ритуалы дают членам сообщества почувствовать, что их слышат, и косвенно направляют поведение членов сообщества.
+    * В идеале у вас должен быть ритуал инициации и ритуал установления связей.
+    * Ритуалы инициации определяют, как вы приветствуете новых членов сообщества. В идеале это должно быть двустороннее взаимодействие. Например, новые члены должны приобрести mirror пост и коллективно представиться группе. С другой стороны, все члены группы должны приложить усилия, чтобы индивидуально установить контакт с новым членом.
+    * Лучшие ритуалы посвящения запоминаются. Например, вы можете заставить всех существующих членов группы на неделю сменить фотографию своего профиля в Twitter на фотографию нового члена. Кто сказал, что ритуалы должны быть формальными?
+    * Ритуал установления связи связывает членов сообщества вне контекста "работы".
+* Хорошие ритуалы связи управляют ожиданиями членов сообщества. Это может быть еженедельный звонок, когда члены сообщества по очереди делятся тем, что у них на уме —
+    * Случилось ли что-нибудь неожиданное в вашем сообществе на этой неделе?
+    * Есть ли что-то незначительное, что беспокоит вас? Может быть, то, как кто-то ответил или что-то сделал, что было пустяком, но заставило вас обратить на это внимание.
+    * Было ли участие в сообществе на этой неделе захватывающим вызовом или сложной задачей?
 
-### Activity 5: Create your manifesto. {-}
+### Деятельность 5: Создайте свой манифест. {-}
 
-* Your community narrative and your values make up your manifesto. If you have done the above exercises diligently, it won’t take long to prepare this.
-* Next, create a collectable Mirror post of this manifesto (ideally free) and personally send it to all your existing Twitter followers.
+* Рассказ о вашем сообществе и ваши ценности составляют ваш манифест. Если вы старательно выполняли вышеперечисленные пункты, подготовка не займет много времени.
+* Затем создайте mirror пост этого манифеста (в идеале - бесплатный) и лично разошлите его всем своим существующим подписчикам в Twitter.
 
 --- Edit till here ---
 
